<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <HorizontalScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        android:scrollbars="none"
        android:layout_gravity="center_vertical" >

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/important"
                style="@style/radioButton"
                android:text="@string/impotant" />

            <RadioButton
                android:id="@+id/video"
                style="@style/radioButton"
                android:text="@string/video" />

            <RadioButton
                android:id="@+id/fan"
                style="@style/radioButton"
                android:text="@string/fan" />

            <RadioButton
                android:id="@+id/sport"
                style="@style/radioButton"
                android:text="@string/sport" />

            <RadioButton
                android:id="@+id/music"
                style="@style/radioButton"
                android:text="@string/music" />

            <RadioButton
                android:id="@+id/money"
                style="@style/radioButton"
                android:text="@string/money"/>
        </RadioGroup>
    </HorizontalScrollView>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <View
            android:id="@+id/view"
            android:layout_width="60dp"
            android:layout_height="2dp"
            android:background="#FF3333" />
    </FrameLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>